Fixed #33727 -- Fixed color contrasts in admin header.

--- a/django/contrib/admin/static/admin/css/responsive.css
+++ b/django/contrib/admin/static/admin/css/responsive.css
@@ -45,7 +45,6 @@ input[type="submit"], button {
 
     #branding h1 {
         margin: 0 0 8px;
-        font-size: 1.25rem;
         line-height: 1.2;
     }
 
